<?xml version="1.0" encoding="utf-8"?>
<resources>

	<string name="app_name">TakataDemo V3</string>
	<string name="action_settings">Splash</string>
	<string name="none"></string>
	<string name="checkbox_notifications">Notifications ON</string>
	<string name="checkbox_launch_lockoutActivity">Launch Lockout screen</string>
	<string name="checkbox_beeps">Beep on transition</string>
	<string name="textview_polling_frequency_in_millis">Polling freq in millis</string>
	<string name="button_usb_service_off">Stop Service</string>
   <string name="button_usb_service_on">Start Service</string>	
   <string name="no_device_found">No USB Device Found</string>    

	<color name="white_foreground">#FFFFFF</color>
	<color name="black_background">#000000</color>

	<string name="title_activity_lockout">LockoutActivity</string>
	<string name="hello_world">Replace this screen with a full screen activity preventing the phone\'s use</string>

</resources>
