<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
   xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollViewRunningLog"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:scrollbars="vertical"
    android:fillViewport="true">
    
   <LinearLayout 
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:paddingBottom="@dimen/activity_vertical_margin"
      android:paddingLeft="@dimen/activity_horizontal_margin"
      android:paddingRight="@dimen/activity_horizontal_margin"
      android:paddingTop="@dimen/activity_vertical_margin"
      android:orientation="vertical"
      android:focusableInTouchMode="true"
      tools:context=".MainActivity" >

      <CheckBox
         android:id="@+id/checkBoxNotifications"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="20dp"
         android:layout_marginTop="4dp"
         android:clickable="true"
         android:onClick="toggleNotifications"
         android:text="@string/checkbox_notifications" />

      <CheckBox
         android:id="@+id/checkBoxBeeps"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="20dp"
         android:layout_marginTop="4dp"
         android:clickable="true"
         android:onClick="toggleBeeps"
         android:text="@string/checkbox_beeps" />
      
      <CheckBox
         android:id="@+id/checkBoxLaunchLockoutActivity"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="20dp"
         android:layout_marginTop="4dp"
         android:clickable="true"
         android:onClick="toggleLockoutActivity"
         android:text="@string/checkbox_launch_lockoutActivity" />         

      <LinearLayout 
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:paddingBottom="@dimen/activity_vertical_margin"
         android:paddingLeft="@dimen/activity_horizontal_margin"
         android:paddingRight="@dimen/activity_horizontal_margin"
         android:paddingTop="@dimen/activity_vertical_margin"
         android:orientation="horizontal"
         tools:context=".MainActivity" >

         <EditText
            android:id="@+id/editTextPollingFreq"
            android:layout_width="fill_parent"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number" />

         <TextView
            android:id="@+id/textView2"
            android:layout_width="fill_parent"
            android:layout_weight="1"
            android:singleLine="true"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:text="@string/textview_polling_frequency_in_millis" />
      </LinearLayout>
         
      <Button
         android:id="@+id/buttonToggleService"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="7dp"
         android:layout_marginTop="7dp"
         android:onClick="toggleUsbListener"
         android:text="@string/button_usb_service_off" />
      
      <TextView
         android:id="@+id/textViewDeviceDescription"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="20dp"
         android:layout_marginTop="4dp"
         android:text="" />     

   </LinearLayout>
</ScrollView>
